src/tui/snapshots/pitboss__tui__app__tests__initial_80x20.snap
---
source: src/tui/app.rs
expression: snap
---
pitboss  run 20260430T120000Z  branch pitboss/play/20260430T120000Z             
phase 01 — Project foundation   [idle]                                          
agent claude-code  model claude-opus-4-7                                        
────────────────────────────────────────────────────────────────────────────────
┌ phases (0/3) ────────────────┐┌ agent output ────────────────────────────────┐
│· 01 Project foundation       ││                                              │
│· 02 Domain types             ││                                              │
│· 03 Plan parser              ││                                              │
└──────────────────────────────┘│                                              │
┌ session ─────────────────────┐│                                              │
│ elapsed   0s                 ││                                              │
│ cost      $0.00              ││                                              │
│ tokens    0 / 0              ││                                              │
│ dispatch  0                  ││                                              │
│ by role                      ││                                              │
│ impl 0/0 $0.00               ││                                              │
│ fix  0/0 $0.00               ││                                              │
│ aud  0/0 $0.00               ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
q quit   p pause   a abort
